# os-labs

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  ubuntu.yml
cmake/: flags.cmake
src/: CMakeLists.txt
src/lab_01/: CMakeLists.txt  README.md  build.sh  extra_build.sh  extra_task_01.cpp  lab_01.cpp  skr
src/lab_02/: CMakeLists.txt  README.md  build_1.sh  build_2.sh  build_3.sh  extra_build.sh  extra_task_02.cpp  lab_02_1.cpp  lab_02_2.cpp  lab_02_3.cpp
src/lab_03/: CMakeLists.txt  README.md  build_1.sh  build_2.sh  build_3.sh  lab_03_1.cpp  lab_03_2.cpp  lab_03_3.cpp
src/lab_04/: CMakeLists.txt  README.md  build.sh  lab_04_1.cpp  lab_04_2.cpp
src/lab_05/: CMakeLists.txt  build_1.sh  build_2.sh  lab_05_1.cpp  lab_05_2.cpp
src/lab_06/: CMakeLists.txt  build_1.sh  build_2.sh  lab_06_1.cpp  lab_06_2.cpp
src/lab_07/: CMakeLists.txt  build_1.sh  build_2.sh  lab_07_1.cpp  lab_07_2.cpp
src/test/: CMakeLists.txt
